Convert to modular application