@@ -1,2 +1,2 @@
 #!/bin/bash
-java --add-modules=javafx.controls -p target/modules -cp "target/classes" com.github.phoswald.sample.SimpleApplication
+java -p target/modules:target/classes -m sample/com.github.phoswald.sample.SimpleApplication
